[package]
name = "python-vaporetto"
version = "0.1.0"
edition = "2021"
authors = ["Koichi Akabe <vbkaisetsu@gmail.com>"]
description = "Python wrapper of Vaporetto tokenizer"
readme = "README.md"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/daac-tools/python-vaporetto"
repository = "https://github.com/daac-tools/python-vaporetto"

[lib]
name = "vaporetto"
crate-type = ["cdylib"]

[dependencies]
hashbrown = "0.12.1"  # MIT or Apache-2.0
pyo3 = { version = "0.16.3", features = ["extension-module"] }  # Apache-2.0
ruzstd = "0.2.4"  # MIT
vaporetto = { version = "0.5.0", features = ["kytea"] }  # MIT or Apache-2.0
vaporetto_rules = "0.5.0"  # MIT or Apache-2.0
