[package]
name = "python-vaporetto"
version = "0.2.1"
edition = "2021"
authors = ["Koichi Akabe <vbkaisetsu@gmail.com>"]
description = "Python wrapper of Vaporetto tokenizer"
readme = "README.md"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/daac-tools/python-vaporetto"
repository = "https://github.com/daac-tools/python-vaporetto"

[lib]
name = "vaporetto"
crate-type = ["cdylib"]

[dependencies]
hashbrown = "0.13.2"  # MIT or Apache-2.0
ouroboros = "0.15.6"  # MIT or Apache-2.0
pyo3 = { version = "0.18.2", features = ["extension-module"] }  # Apache-2.0
ruzstd = "0.3.0"  # MIT
vaporetto_rust = { package = "vaporetto", version = "0.6.3", features = ["kytea"] }  # MIT or Apache-2.0
vaporetto_rules = "0.6.3"  # MIT or Apache-2.0
